tests/baselines/reference/errorElaboration.errors.txt
tests/cases/compiler/errorElaboration.ts(12,5): error TS2345: Argument of type '() => Container<Ref<文字>>' is not assignable to parameter of type '() => Container<Ref<数字>>'.
  Type 'Container<Ref<文字>>' is not assignable to type 'Container<Ref<数字>>'.
    Type 'Ref<文字>' is not assignable to type 'Ref<数字>'.
      Type '文字' is not assignable to type '数字'.


==== tests/cases/compiler/errorElaboration.ts (1 errors) ====
    // Repro for #5712
    
    interface Ref<T> {
        prop: T;
    }
    interface Container<T> {
        m1: Container<Ref<T>>;
        m2: T;
    }
    declare function foo(x: () => Container<Ref<number>>): void;
    let a: () => Container<Ref<string>>;
    foo(a);
        ~
!!! error TS2345: Argument of type '() => Container<Ref<文字>>' is not assignable to parameter of type '() => Container<Ref<数字>>'.
!!! error TS2345:   Type 'Container<Ref<文字>>' is not assignable to type 'Container<Ref<数字>>'.
!!! error TS2345:     Type 'Ref<文字>' is not assignable to type 'Ref<数字>'.
!!! error TS2345:       Type '文字' is not assignable to type '数字'.
    